[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/HUD_TIMER.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/timer_n_score.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/main_lvl.gd" type="Script" id=4]
[ext_resource path="res://scenes/score_dialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://script/CanvasLayer.gd" type="Script" id=6]

[node name="lvl" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 0
script = ExtResource( 6 )

[node name="Control" parent="CanvasLayer" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
margin_left = -60.0
margin_top = -29.0
margin_right = 60.0
mouse_filter = 2

[node name="Menu" parent="CanvasLayer" instance=ExtResource( 3 )]

[node name="timer_n_score" parent="CanvasLayer" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -48.0
margin_right = 49.0
margin_bottom = 88.0

[node name="SCORE_DIALOG" parent="CanvasLayer" instance=ExtResource( 5 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -148.0
margin_right = 200.0
margin_bottom = 148.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
